# mission-control

./: .gitignore  CLAUDE.md  DESIGN.md  PLAN.md  README.md
.claude/: settings.json
.claude/commands/: check.md  dev.md  fix-issue.md  handoff.md  spike.md
.claude/hooks/: format.sh  guard-secrets.sh  verify-gate.sh
.claude/skills/quota-collector/: SKILL.md
.claude/skills/teach/: SKILL.md
api/: .coverage  .env.example  SLACK_SETUP.md  pyproject.toml
api/missioncontrol/: __init__.py  agentcmd.py  alerts.py  claude.py  claudecreds.py  claudequota.py  codex.py  events.py  launch.py  main.py  models.py  notify.py  osnotify.py  paths.py  pricing.py  redact.py  security.py  service.py  slack.py  slacksource.py  store.py  transcript.py
api/tests/: test_agentcmd.py  test_alerts.py  test_api.py  test_claude.py  test_claudequota.py  test_codex.py  test_events.py  test_notify.py  test_osnotify.py  test_pricing.py  test_redact.py  test_security.py  test_service_slack.py  test_slack.py  test_store.py  test_transcript.py
docs/: 0001-project-setup.html  0002-v1-quota-dashboard.html  0003-v1-followups-and-v1.5.html  0004-v2-timeline.html  0005-v2-slack-collector.html  0006-accurate-claude-quota.html  _template.html  index.html  style.css
web/: package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/timeline/: page.tsx
web/app/watch/: page.tsx
