[project]
name = "missioncontrol-api"
version = "0.1.0"
description = "Mission Control API — credential-free agent quota/usage collectors + read-only dashboard API."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "mypy>=1.11",
  "ruff>=0.6",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["missioncontrol"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
addopts = "--cov=missioncontrol --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["missioncontrol"]
# I/O seams (filesystem + web framework wiring) are covered by manual run + e2e, not unit %.
omit = ["missioncontrol/paths.py", "missioncontrol/service.py", "missioncontrol/main.py"]
